# create-github-issue-workflow-fails

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
